feat: update homepage content and add favicon
- Update title and personal information
- Add favicon.svg
- Replace external avatar URLs with local file
- Update project links and descriptions
- Modify skills section to reflect current abilities

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stitch Design - Enhanced</title>
+    <title>Luna's Homepage</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -254,15 +255,15 @@
                         <div class="size-8 text-[var(--color-accent-pink)]">
                             <svg fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M2 2H4V4H2V2ZM4 2H6V4H4V2ZM6 2H8V4H6V2ZM8 2H10V4H8V2ZM10 2H12V4H10V2ZM12 2H14V4H12V2ZM14 2H16V4H14V2ZM16 2H18V4H16V2ZM18 2H20V4H18V2ZM20 2H22V4H20V2ZM2 4H4V6H2V4ZM20 4H22V6H20V4ZM2 6H4V8H2V6ZM6 6H8V8H6V6ZM10 6H14V8H10V6ZM16 6H18V8H16V6ZM20 6H22V8H20V6ZM2 8H4V10H2V8ZM8 8H10V10H8V8ZM14 8H16V10H14V10ZM20 8H22V10H20V8ZM2 10H4V12H2V10ZM6 10H8V12H6V10ZM10 10H14V12H10V10ZM16 10H18V12H16V10ZM20 10H22V12H20V10ZM2 12H4V14H2V12ZM20 12H22V14H20V12ZM2 14H4V16H2V14ZM4 14H6V16H4V14ZM6 14H8V16H6V14ZM8 14H10V16H8V14ZM10 14H12V16H10V14ZM12 14H14V16H12V14ZM14 14H16V16H14V14ZM16 14H18V16H16V14ZM18 14H20V16H18V14ZM20 14H22V16H20V14Z"/></svg>
                         </div>
-                        <h2 class="pixel-art-font text-[var(--color-text-primary)] text-2xl font-bold">Luna's Pixel Palace</h2>
+                        <h2 class="pixel-art-font text-[var(--color-text-primary)] text-2xl font-bold">Luna's Palace</h2>
                     </div>
                     <div class="flex items-center gap-4 sm:gap-6">
                         <div class="hidden sm:flex items-center gap-6">
                             <a class="nav-link pixel-art-font text-lg font-medium" href="#about">About</a>
-                            <a class="nav-link pixel-art-font text-lg font-medium" href="#projects">Projects</a>
+                            <a class="nav-link pixel-art-font text-lg font-medium" href="#projects" target="_blank">My Projects</a>
                             <a class="nav-link pixel-art-font text-lg font-medium" href="#contact">Contact</a>
                         </div>
-                        <div class="avatar rounded-md size-12 pixel-border border-2 border-[var(--color-border-pink)]" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBF1GNS33RQP_-Npg4opZWrhLOaPGCZWKM32jkN2146VS9OnWM6pr0klxcurFRCvn-cZOR9kweyG6OBffQ-RS3uG6KDiUAm1J0_AU6T8k4gaPgtKBDvVUY8t1R1EKgECp1OOGjH2x_0hQVBkkvuPOJpXa_xaIp42EaFd-49vfqkBov054b8n84lobHJB0NL3oBovh5fu3nF78y-yeDq6x3klHXVjsKK8F1EqrD-I-zsUCAqe__ZJ3SyC3aKytNiQ4rzVoY79tBA2BY");'></div>
+                        <div class="avatar rounded-md size-12 pixel-border border-2 border-[var(--color-border-pink)]" style='background-image: url("avatar.png");'></div>
                     </div>
                 </nav>
             </header>
@@ -273,12 +274,12 @@
                     <!-- Hero Card -->
                     <section class="flex justify-center">
                         <div class="hero-card flex w-full max-w-lg flex-col gap-6 items-center bg-white pixel-border-trans p-8 rounded-lg shadow-lg">
-                            <div class="avatar rounded-md min-h-40 w-40 pixel-border border-4 border-[var(--color-border-pink)]" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB3halYFw3wlq-Ix7B_U9jkoCOPcASRb0pzZUvcw9WHZwk44pvL7XzuaQFHdKSMQcjOCmE8oGTJPN7AXZrsTLDOlyfQoYZueTiKM-MOloGWK-_U3amybrUf__xF_yzIGdbjNTFI0P29XX7tguS_eteoXYIL7zjBeyrQG2UB9E9Xj05TVTZ4e8j6ok6SWWGMNrYdygDW08Diwrh5Na-u0CvPXDVDqozoRodfr4RSeVzsxTZMiFAc9u_fj9O3r2HESZkfmlwf0RsTF9c");'></div>
+                            <div class="avatar rounded-md min-h-40 w-40 pixel-border border-4 border-[var(--color-border-pink)]" style='background-image: url("avatar.png");'></div>
                             <div class="flex flex-col items-center justify-center gap-1">
                                 <h1 class="pixel-art-font trans-gradient-text text-6xl font-bold text-center pb-2">Luna</h1>
-                                <p class="pixel-art-font text-[var(--color-text-secondary)] text-xl font-medium text-center">Pixel Artist &amp; Dreamer</p>
+                                <p class="pixel-art-font text-[var(--color-text-secondary)] text-xl font-medium text-center">Full stack web dev &amp; Student</p>
                                 <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-normal text-center">She/Her</p>
-                                <a class="mt-4 primary-button px-5 py-2.5 rounded-md pixel-border-white border-2 text-sm font-bold flex items-center gap-2" href="https://github.com/lunapixel" rel="noopener noreferrer" target="_blank">
+                                <a class="mt-4 primary-button px-5 py-2.5 rounded-md pixel-border-white border-2 text-sm font-bold flex items-center gap-2" href="https://github.com/tls-luna-zhu" rel="noopener noreferrer" target="_blank">
                                     <svg viewBox="0 0 24 24" width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 2H2V0H4V2H6V4H4V6H2V4H0V2ZM2 8H4V6H6V8H8V6H10V8H8V10H6V12H4V10H2V8ZM6 14H4V12H2V14H0V16H2V18H4V16H6V14Z M10 10H8V12H10V14H8V16H10V18H12V20H14V22H16V20H18V22H20V20H22V18H24V16H22V14H20V16H18V14H16V12H14V10H12V8H14V6H16V4H18V2H20V0H18V2H16V0H14V2H12V4H10V6H12V8H10V10ZM16 16H14V18H16V16ZM18 10H16V8H18V6H20V8H22V10H20V12H18V10Z" fill="white"></path></svg>
                                     GitHub
                                 </a>
@@ -292,7 +293,7 @@
                             <span class="text-2xl">🌸</span>About Me
                         </h2>
                         <p class="pixel-art-font text-[var(--color-text-muted)] text-lg leading-relaxed px-4">
-                            Hi there! I'm Luna, a pixel artist with a passion for creating cute and colorful designs. I love expressing myself through my art and sharing it with others. My work often incorporates pastel colors and elements of transgender pride, reflecting my identity and experiences. Welcome to my little corner of the internet! ✨
+                            Hi there! I'm Luna, I'm a student and also a full stack web developer! Welcome to my little corner of the internet! ✨
                         </p>
                     </section>
                     
@@ -304,31 +305,31 @@
                         <div class="space-y-5 p-4">
                             <div>
                                 <div class="flex justify-between items-center mb-1">
-                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Pixel Art</p>
-                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">90%</p>
+                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Nuxt.js</p>
+                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">Intermediate</p>
                                 </div>
                                 <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="90%" style="background-color: var(--color-trans-pink);"></div></div>
                             </div>
                             <div>
                                 <div class="flex justify-between items-center mb-1">
-                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Web Design (HTML/CSS)</p>
-                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">75%</p>
+                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Web Design (Tailwindcss)</p>
+                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">Still learning</p>
                                 </div>
                                 <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="75%" style="background-color: var(--color-trans-blue);"></div></div>
                             </div>
                              <div>
                                 <div class="flex justify-between items-center mb-1">
-                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Illustration</p>
-                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">80%</p>
+                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">pixel art</p>
+                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">Novice</p>
                                 </div>
-                                <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="80%" style="background-color: #70D870;"></div></div>
+                                <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="60%" style="background-color: #70D870;"></div></div>
                             </div>
                             <div>
                                 <div class="flex justify-between items-center mb-1">
-                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Game Development (Unity)</p>
-                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">60%</p>
+                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Game Development (Godot)</p>
+                                    <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">Beginner</p>
                                 </div>
-                                <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="60%" style="background-color: #D8B870;"></div></div>
+                                <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="40%" style="background-color: #D8B870;"></div></div>
                             </div>
                         </div>
                     </section>
@@ -339,21 +340,21 @@
                             <span class="text-2xl">💖</span>My Projects
                         </h2>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 p-4">
-                            <a class="link-card block pixel-border border-2 border-[#FFD1E8] bg-gradient-to-br from-[#FFF0F5] to-[#FFE4EE] p-4 rounded-md group" href="#" target="_blank">
-                                <h3 class="pixel-art-font text-xl font-bold text-[var(--color-text-primary)] group-hover:text-[#C15A94] transition-colors">Project Sparkle ✨</h3>
-                                <p class="pixel-art-font text-sm text-[var(--color-text-secondary)] group-hover:text-[#A25092] transition-colors">A collection of dreamy pixel animations.</p>
+                            <a class="link-card block pixel-border border-2 border-[#D1E0FF] bg-gradient-to-br from-[#E0F0FF] to-[#D1E4FF] p-4 rounded-md group" href="https://blog.lunazhu.top" target="_blank">
+                                <h3 class="pixel-art-font text-xl font-bold text-[var(--color-text-primary)] group-hover:text-[#C15A94] transition-colors">My blog ✨</h3>
+                                <p class="pixel-art-font text-sm text-[var(--color-text-secondary)] group-hover:text-[#A25092] transition-colors">A place where i post my stuff</p>
                             </a>
                             <a class="link-card block pixel-border border-2 border-[#D1E8FF] bg-gradient-to-br from-[#F0F8FF] to-[#E4F2FF] p-4 rounded-md group" href="#" target="_blank">
-                                <h3 class="pixel-art-font text-xl font-bold text-[#70A9D8] group-hover:text-[#5A94C1] transition-colors">Pixel Pet Pals 🐾</h3>
-                                <p class="pixel-art-font text-sm text-[#65A7B5] group-hover:text-[#5092A2] transition-colors">Cute virtual pets for your desktop.</p>
+                                <h3 class="pixel-art-font text-xl font-bold text-[#70A9D8] group-hover:text-[#5A94C1] transition-colors">Coming soon! 🐾</h3>
+                                <p class="pixel-art-font text-sm text-[#65A7B5] group-hover:text-[#5092A2] transition-colors">Coming Soon!</p>
                             </a>
-                            <a class="link-card block pixel-border border-2 border-[#FFF3CD] bg-gradient-to-br from-[#FFFBEB] to-[#FFF8E1] p-4 rounded-md group" href="#" target="_blank">
-                                <h3 class="pixel-art-font text-xl font-bold text-[#D8B870] group-hover:text-[#C1A05A] transition-colors">Rainbow Runner 🌈</h3>
-                                <p class="pixel-art-font text-sm text-[#B5A765] group-hover:text-[#A29250] transition-colors">A vibrant and endless runner game.</p>
+                            <a class="link-card block pixel-border border-2 border-[#FFE0D1] bg-gradient-to-br from-[#FFF0E0] to-[#FFE4D1] p-4 rounded-md group" href="https://estropad.lunazhu.top" target="_blank">
+                                <h3 class="pixel-art-font text-xl font-bold text-[#D8B870] group-hover:text-[#C1A05A] transition-colors">Estrogen Tracker 🍥</h3>
+                                <p class="pixel-art-font text-sm text-[#B5A765] group-hover:text-[#A29250] transition-colors">An estrogen tracker.</p>
                             </a>
-                            <a class="link-card block pixel-border border-2 border-[#D1FFD1] bg-gradient-to-br from-[#F0FFF0] to-[#E4FFE4] p-4 rounded-md group" href="#" target="_blank">
-                                <h3 class="pixel-art-font text-xl font-bold text-[#70D870] group-hover:text-[#5AC15A] transition-colors">Pastel Planner 🗓️</h3>
-                                <p class="pixel-art-font text-sm text-[#65B565] group-hover:text-[#50A250] transition-colors">A cutesy digital planner app.</p>
+                            <a class="link-card block pixel-border border-2 border-[#D1FFD1] bg-gradient-to-br from-[#F0FFF0] to-[#E4FFE4] p-4 rounded-md group" href="https://todo.lunazhu.top" target="_blank">
+                                <h3 class="pixel-art-font text-xl font-bold text-[#70D870] group-hover:text-[#5AC15A] transition-colors">LunaTodo 🗓️</h3>
+                                <p class="pixel-art-font text-sm text-[#65B565] group-hover:text-[#50A250] transition-colors">A cutesy digital todo app.</p>
                             </a>
                         </div>
                     </section>
@@ -361,7 +362,7 @@
                      <!-- Hobbies -->
                     <section class="content-card delay-3 pixel-border-trans p-6 rounded-lg shadow-md">
                         <h2 class="pixel-art-font text-3xl font-bold px-4 pb-4 pt-2 text-[var(--color-text-primary)] flex items-center gap-3">
-                            <span class="text-2xl">💖</span>Hobbies &amp; Interests
+                            <span class="text-2xl">💖</span>Interests
                         </h2>
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
                             <div class="link-card flex flex-col items-center gap-3 rounded-lg border-2 border-[#FFCDEA] bg-[#FFF7FA] p-4">
@@ -395,7 +396,7 @@
                     </section>
 
                     <footer class="text-center py-8">
-                        <p class="pixel-art-font text-sm text-[var(--color-text-secondary)]">© 2024 Luna's Pixel Palace. Crafted with love &amp; pixels. 🏳️‍⚧️</p>
+                        <p class="pixel-art-font text-sm text-[var(--color-text-secondary)]">© 2025 Luna's Pixel Palace. Crafted with love &amp; pixels. 🏳️‍⚧️</p>
                     </footer>
                 </div>
             </main>
