--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             </div>
                              <div>
                                 <div class="flex justify-between items-center mb-1">
-                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">pixel art</p>
+                                    <p class="pixel-art-font text-[var(--color-text-secondary)] text-lg font-medium">Pixel Art</p>
                                     <p class="pixel-art-font text-[var(--color-text-primary)] text-sm font-medium">Novice</p>
                                 </div>
                                 <div class="progress-bar-bg"><div class="progress-bar-fill" data-width="60%" style="background-color: #70D870;"></div></div>
